# curium.cm

./: .gitignore  .gitmodules  Cargo.toml  README.md  bootstrap.ps1  compiler.cm  output.c  plan.md  test_artifacts.txt  usecase.md
.github/workflows/: ci.yml
bootstrap/: .gitkeep
core/: prelude.cm
doc/: stdlib.md
examples/: fibonacci.cm  hello.cm  linked_list.cm  structs.cm
src/: formatter.rs  main.rs
src/cli/: mod.rs
src/codegen/: c_backend.rs  mod.rs
src/error/: diagnostics.rs  mod.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/lsp/: jsonrpc.rs  mod.rs  server.rs  test_lsp.rs
src/parser/: ast.rs  grammar.rs  mod.rs
src/type_checker/: checker.rs  mod.rs  symbol_table.rs
std/: fs.cm  io.cm  process.cm  string.cm  vec.cm
tests/: harness_demo.cm  stability_full.cm  uc_002_003_lexer_parser.cm  uc_004_005_codegen.cm  uc_008_009_typechecker.cm  uc_010_011_pointers_dyn.cm  uc_012_013_016_reactor_polyglot.cm  uc_014_015_match_errors.cm  uc_027_error_reporting.cm  uc_031_034_stdlib.cm
